# ITKStatisticsFilters

./: CMakeLists.txt  gabor.cxx  gabor.xml  itkKurtosisImageFilter.h  itkKurtosisImageFilter.hxx  itkSkewnessImageFilter.h  itkSkewnessImageFilter.hxx  itkStandardizedMomentImageFilter.h  itkStandardizedMomentImageFilter.hxx  kurtosis.cxx  kurtosis.xml  skewness.cxx  skewness.xml  standarddeviation.cxx  standarddeviation.xml
Test/: kurtosisNumpy.py  skewnessNumpy.py
